# ygo-nexus

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
cardtool/: extract.py  pac.py  packimg.py
cardtool/web/: .env.production  index.html  jsconfig.json  package-lock.json  package.json  serve.py  wrangler.jsonc
cardtool/web/public/: cards.json
cardtool/web/src/: App.svelte  app.css
cardtool/web/src/components/: CardDetail.svelte  CardFrame.svelte  CardRow.svelte  CardTable.svelte  ChipGroup.svelte  DeckEditor.svelte  DeckEntry.svelte  DeckMenu.svelte  DeckPanel.svelte  DeckToolbar.svelte  Filters.svelte  HoverPreview.svelte  LimitBadge.svelte  PackPopover.svelte  RangeGroup.svelte  SearchBar.svelte  ToTop.svelte  Toast.svelte  ZoomOverlay.svelte
cardtool/web/src/lib/: a11y.js  cards.js  keepScroll.js  savefile.js
cardtool/web/src/lib/stores/: data.svelte.js  deck.svelte.js  deckFilters.svelte.js  filters.svelte.js  layout.svelte.js  media.svelte.js  nav.svelte.js  owned.svelte.js  preview.svelte.js  results.svelte.js  theme.svelte.js  toast.svelte.js  ui.svelte.js
cardtool/web/worker/: index.js
cheats/: base.cht  base.mch
docs/: card-format.md
romhack/: analyze.py  bake_all.py  bake_dp.py  check_dp.py  compare.py  disasm.py  re_enqueue.py  re_save.py  re_savegate.py
testdata/: fruta.sav
